# copyclip-rewrite

./: .env.example  .gitignore  copyclip.db  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
migrations/: 0001_create_clips_table.sql
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/database/migrations/: 001_create_clips_table.sql
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_create_clipboard_table.sql
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/services/: clips_service.rs  mod.rs
src/assets/css/: style.css
src/assets/data/: dummy-clips.tsx  tasks.tsx
src/components/: ClipboardItem.tsx  HistoryList.tsx
src/components/clipboard/: ClipboardItem.tsx  ClipboardList.tsx  FilterAction.tsx  ItemAction.tsx  MenuAction.tsx
src/components/core/: ClipboardItem.tsx  ClipboardView.tsx  Searchbar.tsx
src/components/emoji/: EmojiPicker.tsx  EmojiView.tsx
src/components/layouts/: Default.tsx  SplashScreen.tsx
src/components/settings/: Settings.tsx  SettingsView.tsx
src/contexts/: clipboard-context.tsx  database-context.tsx  db-context.tsx  global-context.tsx
src/css/: style.css
src/hooks/: index.tsx  useClipboardApi.tsx  useClipboardListener.tsx  useDatabase.tsx  useVimMotion.tsx
src/lib/: IndexedDBManager.ts  db-config.ts  imageStorage.ts  utils.tsx
src/types/: clipboard.tsx  index.ts  tasks.tsx
src/utils/: constants.tsx  core.tsx  helpers.tsx
(+14 files in other folders)
