[package]
name = "copyclip"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
edition = "2021"


[lib]
name = "copyclip_rewrite_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]


[build-dependencies.tauri-build]
version = "2"
features = [ ]


[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"


[dependencies.tauri]
version = "2"
features = [ ]


[dependencies.serde]
version = "1"
features = [ "derive" ]
