[package]
name = "copyclip"
version = "0.1.0"
description = "This is a clipboard managing tools."
authors = [ "you" ]
edition = "2021"


[lib]
name = "lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]


[build-dependencies.tauri-build]
version = "2"
features = [ ]


[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-clipboard = "2.1.11"


[dependencies.tauri]
version = "2"
features = [ ]


[dependencies.serde]
version = "1"
features = [ "derive" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2"
